--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.0.0-beta.54",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
-    "jest": "^23.4.2"
+    "jest": "^23.4.2",
+    "standard-version": "^4.4.0"
   }
 }
