--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-fetch",
   "version": "1.1.0",
-  "description": "Utilities for fetch",
+  "description": "Utilities for custom fetch",
   "repository": "ambar/create-fetch",
   "sideEffects": false,
   "main": "lib/index.js",
