--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "middleware"
   ],
   "scripts": {
-    "build:cjs": "rm -rf ./lib && NODE_ENV=production babel src --out-dir lib",
-    "build:es": "rm -rf ./es && NODE_ENV=production BABEL_ENV=es babel src --out-dir es",
+    "prebuild": "rm -rf lib es",
+    "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel src --out-dir lib",
+    "build:es": "NODE_ENV=production BABEL_ENV=es babel src --out-dir es",
     "build": "npm run build:cjs && npm run build:es",
     "test": "jest",
     "test:coverage": "jest --coverage",
