--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "repository": "ambar/create-fetch",
   "license": "MIT",
   "sideEffects": false,
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
   "unpkg": "dist/index.js",
   "files": [
-    "es",
-    "lib",
-    "dist",
-    "src"
+    "cjs",
+    "esm",
+    "dist"
   ],
   "keywords": [
     "fetch",
@@ -21,13 +20,22 @@
     "middleware"
   ],
   "scripts": {
+    "prepare": "npm run test && npm run build",
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "prebuild": "rm -rf lib es dist",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch --notify",
-    "prepare": "npm run test && npm run build"
+    "test:watch": "jest --watch --notify"
+  },
+  "jest": {
+    "setupFiles": [
+      "cross-fetch/polyfill"
+    ],
+    "snapshotSerializers": [
+      "./jest/FormDataSerializer",
+      "./jest/URLSearchParamsSerializer"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
@@ -36,11 +44,11 @@
     "@babel/preset-env": "^7.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
-    "jest": "^23.5.0",
-    "rollup": "^0.67.4",
-    "rollup-plugin-babel": "^4.1.0-0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-terser": "^3.0.0",
+    "cross-fetch": "^3.0.1",
+    "jest": "^24.1.0",
+    "rollup": "^1.2.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-terser": "^4.0.4",
     "standard-version": "^4.4.0"
   }
 }
