--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "ambar/create-fetch",
   "license": "MIT",
   "sideEffects": false,
-  "main": "cjs/index.js",
-  "module": "esm/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "unpkg": "dist/index.js",
   "files": [
     "cjs",
@@ -23,11 +23,12 @@
     "prepare": "npm run test && npm run build",
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "prebuild": "rm -rf cjs esm dist",
+    "prebuild": "rm -rf dist",
     "test": "jest --coverage",
     "test:watch": "jest --watch --notify"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFiles": [
       "cross-fetch/polyfill"
     ],
@@ -37,17 +38,14 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
     "@babel/preset-env": "^7.3.4",
-    "babel-core": "^7.0.0-bridge.0",
     "codecov": "^3.2.0",
     "cross-fetch": "^3.0.1",
-    "jest": "^24.5.0",
+    "jest": "^27.0.6",
     "rollup": "^1.2.2",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-terser": "^4.0.4",
-    "standard-version": "^8.0.1"
+    "rollup-plugin-terser": "^4.0.4"
   }
 }
