--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
     "@babel/preset-env": "^7.3.4",
+    "@rollup/plugin-babel": "^5.3.0",
     "codecov": "^3.2.0",
     "cross-fetch": "^3.0.1",
     "jest": "^27.0.6",
-    "rollup": "^1.2.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-terser": "^4.0.4"
+    "rollup": "^2.55.1",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
