--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "cjs",
-    "esm",
     "dist"
   ],
   "keywords": [
@@ -23,11 +22,12 @@
     "prepare": "npm run test && npm run build",
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "prebuild": "rm -rf dist",
+    "prebuild": "rm -rf dist/**",
     "test": "jest --coverage",
     "test:watch": "jest --watch --notify"
   },
   "jest": {
+    "preset": "es-jest",
     "testEnvironment": "jsdom",
     "setupFiles": [
       "cross-fetch/polyfill"
@@ -38,14 +38,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
-    "@babel/preset-env": "^7.3.4",
-    "@rollup/plugin-babel": "^5.3.0",
     "codecov": "^3.2.0",
     "cross-fetch": "^3.0.1",
+    "es-jest": "^1.2.0",
     "jest": "^27.0.6",
     "rollup": "^2.55.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.3.5"
   }
 }
