--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: test
       run: |
         yarn
-        yarn test:coverage
+        yarn jest --coverage
     - name: report
       uses: coverallsapp/github-action@v1.0.1
       with:
