--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "cross-fetch": "^3.0.1",
     "es-jest": "^1.2.0",
     "jest": "^27.0.6",
