--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
+  "include": ["src", "test"],
   "compilerOptions": {
     "target": "ESNext",
     "declaration": true,
     "downlevelIteration": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"]
-  },
-  "include": ["src/**/*.ts"]
+  }
 }
