--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@
 # Files
 *.log
 .DS_Store
+
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
