--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "include": ["src", "test"],
   "compilerOptions": {
     "target": "ESNext",
+    "moduleResolution": "Node",
     "declaration": true,
     "downlevelIteration": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"]
