ci: use Node 20, add plugin-dedupe-on-install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +24,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: test
         run: |
+          corepack enable
           yarn
+          yarn build
           yarn jest --coverage
       - name: report
         uses: coverallsapp/github-action@v1.0.1
