--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "source": "src/index.ts",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
-  "unpkg": "dist/index.js",
+  "unpkg": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
